--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<nav>
 				<a href="./index.html">WebStudio</a>
 				<ul>
-					<li><a href="">Studio</a></li>
-					<li><a href="">Portfolio</a></li>
+					<li><a href="./index.html" target="_self">Studio</a></li>
+					<li><a href="./portfolio.html" target="_self">Portfolio</a></li>
 					<li><a href="">Contacts</a></li>
 				</ul>
 			</nav>
