--- a/index.html
+++ b/index.html
@@ -5,36 +5,39 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>WEBSTUDIO</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="./css/styles.css">
 	</head>
-
 	<body>
 		<header>
 			<nav>
-				<a href="./index.html">WebStudio</a>
-				<ul>
-					<li><a href="./index.html" target="_self">Studio</a></li>
-					<li><a href="./portfolio.html" target="_self">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+				<a href="./index.html" class="header-logo">WEB<span class="logo-span">STUDIO</span></a>
+				<ul class="list">
+					<li class="header-item"><a href="./index.html" target="_self" class="list-link">Studio</a></li>
+					<li class="header-item"><a href="./portfolio.html" target="_self" class="list-link">Portfolio</a></li>
+					<li class="header-item"><a href="" class="list-link">Contacts</a></li>
 				</ul>
 			</nav>
 			<address>
-				<ul>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				<ul class="list">
+					<li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
 		<main>
 			<!-- Section Hero -->
-			<section>
+			<section class="hero-section">
 				<h1>Effective Solutions for Your Business</h1>
-				<button type="button">Order Service</button>
+				<button type="button" class="hero-button">Order Service</button>
 			</section>
 			<!-- /Section Hero -->
 			<!-- Section features -->
 			<section>
 				<h2 hidden>Features</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<h3>Strategy</h3>
 						<p> Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
@@ -59,7 +62,7 @@
 			<!-- Section What are we doing -->
 			<section>
 				<h2>What are we doing</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/what_are_we_doing/img_1.jpg" alt="img_1" width="360" height="300" />
 					</li>
@@ -70,29 +73,28 @@
 						<img src="./images/what_are_we_doing/img_3.jpg" alt="img_3" width="360" height="300" />
 					</li>
 				</ul>
-				<img src="/photo.jpg" alt="Image example" height="150" width="200" />
 			</section>
 			<!-- /Section What are we doing -->
 			<!-- Section Our team -->
-			<section>
+			<section class="team-section">
 				<h2>Our Team</h2>
-				<ul>
-					<li>
+				<ul class="list">
+					<li class="team-item">
 						<img src="./images/our_team/teammate1.jpg" alt="teammate1" width="264" />
 						<h3>Mark Guerrero</h3>
 						<p>Product Designer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/our_team/teammate2.jpg" alt="teammate2" width="264" />
 						<h3>Tom Ford</h3>
 						<p>Frontend Developer</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/our_team/teammate3.jpg" alt="teammate3" width="264" />
 						<h3>Camila Garcia</h3>
 						<p>Marketing</p>
 					</li>
-					<li>
+					<li class="team-item">
 						<img src="./images/our_team/teammate4.jpg" alt="teammate4" width="264" />
 						<h3>Daniel Wilson</h3>
 						<p>UI Designer</p>
@@ -102,8 +104,8 @@
 			<!-- /Section Our team -->
 		</main>
 		<footer>
-			<a href="./index.html">WebStudio</a>
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			<a href="./index.html" class="header-logo">WEB<span class="logo-span-footer">STUDIO</span></a>
+			<p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
 		</footer>
 	</body>
 </html>
