--- a/portfolio.html
+++ b/portfolio.html
@@ -5,28 +5,32 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="./css/styles.css">
 	</head>
 	<body>
 		<header>
 			<nav>
-				<a href="./index.html">WebStudio</a>
-				<ul>
-					<li><a href="./index.html" >Studio</a></li>
-					<li><a href="./portfolio.html">Portfolio</a></li>
-					<li><a href="">Contacts</a></li>
+				<a href="./index.html" class="header-logo">WEB<span class="logo-span">STUDIO</span></a>
+				<ul class="list">
+					<li class="header-item"><a href="./index.html" target="_self" class="list-link">Studio</a></li>
+					<li class="header-item"><a href="./portfolio.html" target="_self" class="list-link">Portfolio</a></li>
+					<li class="header-item"><a href="" class="list-link">Contacts</a></li>
 				</ul>
 			</nav>
 			<address>
-				<ul>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				<ul class="list">
+					<li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
 		<main>
 			<!--Section buttons-->
 			<section>
-				<ul>
+				<ul class="list">
 					<li><button type="button">All</button></li>
 					<li><button type="button">Web Site</button></li>
 					<li><button type="button">App</button></li>
@@ -36,7 +40,7 @@
 			</section>
 			<!--/Section buttons-->
 			<section>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/portfolio/img1.jpg" alt="" height="300" width="360">
 						<h3>Banking App Interface Concept</h3>
@@ -86,8 +90,8 @@
 			</section>
 		</main>
 		<footer>
-			<a href="./index.html">WebStudio</a>
-			<p> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
+			<a href="./index.html" class="header-logo">WEB<span class="logo-span-footer">STUDIO</span></a>
+			<p class="footer-text"> Increase the flow of customers and sales for your business with digital marketing & growth solutions. </p>
 		</footer>
 	</body>
 </html>
